--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.0",
   "packageManager": "yarn@3.6.1",
   "dependencies": {
+    "@ant-design/compatible": "^5.1.3",
     "@ant-design/icons": "^5.3.0",
     "@shammasov/mydux": "workspace:^0.2.0",
     "@shammasov/utils": "workspace:^0.2.0",
