--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -20,7 +20,8 @@
     "@capacitor/haptics": "^6.0.0",
     "@capacitor/keyboard": "^6.0.0",
     "@capacitor/splash-screen": "latest",
-    "@capacitor/status-bar": "^6.0.0"
+    "@capacitor/status-bar": "^6.0.0",
+    "moment": "^2.30.1"
   },
   "devDependencies": {
     "vite": "^2.9.13"
